--- a/quickly/index.html
+++ b/quickly/index.html
@@ -3,6 +3,7 @@ layout: project
 title: "Quickly"
 logo: /images/quickly.png
 tagline: ES6 and Node.js-like environment for QML
+permalink: /quickly
 ---
 
 <div style="display: flex">
