Fix the layout of the Quickly page on mobile
Flexbox is awesome!

--- a/quickly/index.html
+++ b/quickly/index.html
@@ -6,22 +6,22 @@ tagline: ES6 and Node.js-like environment for QML
 permalink: /quickly
 ---
 
-<div style="display: flex">
-<div style="margin: auto">
-
-  <a class="ui large primary labeled icon button" href="http://quickly.readthedocs.org">
+<div style="display: flex; justify-content: center; flex-wrap: wrap; margin-top: -5px; margin-bottom: -5px">
+  <a class="ui large primary labeled icon button" style="flex-shrink: 0; margin: 5px"
+     href="http://quickly.readthedocs.org">
      <i class="book icon"></i>
     Documentation
   </a>
-  <a class="ui large labeled icon button" href="https://github.com/iBeliever/quickly">
+  <a class="ui large labeled icon button" style="flex-shrink: 0; margin: 5px"
+     href="https://github.com/iBeliever/quickly">
     <i class="github icon"></i>
     GitHub
   </a>
-  <a class="ui large teal labeled icon button" href="https://gitter.im/iBeliever/quickly">
+  <a class="ui large teal labeled icon button" style="flex-shrink: 0; margin: 5px"
+     href="https://gitter.im/iBeliever/quickly">
     <i class="comment icon"></i>
     Gitter Chat
   </a>
-</div>
 </div>
 
 <div class="ui vertical stripe segment" style="padding-top: 3em">
@@ -57,11 +57,12 @@ register(Person)
 {% endhighlight %}
       </div>
     </div>
-    <div class="row">
-      <div class="center aligned column">
-        <a class="ui huge button" href="https://babeljs.io/docs/learn-es2015/">Learn more about ES6</a>
-        <a class="ui huge button" href="http://quickly.readthedocs.org/en/latest/qmlify.html">QMLify Usage</a>
-      </div>
+    <div class="row"
+         style="display: flex; justify-content: center; flex-wrap: wrap; padding-top: 9px; padding-bottom: 9px">
+      <a class="ui huge button" style="flex-shrink: 0; margin: 5px"
+         href="https://babeljs.io/docs/learn-es2015/">Learn more about ES6</a>
+      <a class="ui huge button" style="flex-shrink: 0; margin: 5px"
+         href="http://quickly.readthedocs.org/en/latest/qmlify.html">QMLify Usage</a>
     </div>
   </div>
 </div>
